--- a/cityguide/css/cityguide.css
+++ b/cityguide/css/cityguide.css
@@ -14,6 +14,19 @@ html {
     color: var(--color-black);
 }
 
+h1, h2, h3 {
+    margin-bottom: 1em;
+}
+
+form {
+    padding-top: 1.5em;
+    margin-bottom: 1em;
+}
+
+input {
+    margin-bottom: 1em;
+}
+
 .Container {
     max-width: 45em;
     margin: 0 auto;
