change template home name

--- a/cityguide/templates/cityguide/includes/header.html
+++ b/cityguide/templates/cityguide/includes/header.html
@@ -4,7 +4,7 @@
 
 <header class="Header" role="banner">
     <div class="u-flex">
-        <a href="/">Ancillary</a>
+        <a href="/">Cityguide</a>
         <nav class="u-flexExpandLeft">
             {% if user.is_authenticated %}
             <span>Welcome, {{ user_display }}</span>
