--- a/cityguide/templates/account/email_confirm.html
+++ b/cityguide/templates/account/email_confirm.html
@@ -10,16 +10,15 @@
 
 {% if confirmation %}
 
-{% user_display confirmation.email_address.user as user_display %}
-
-{% confirmation.email_address.email as email %}
-
-<p>Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.</p>
+{% with confirmation.email_address.email as email %}
+<p>Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is a valid e-mail address.</p>
+{% endwith %}
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
     {% csrf_token %}
     <button class="Button" type="submit">Confirm</button>
 </form>
+
 
 {% else %}
 
